test/negative/InterfaceConstructor.java
public interface InterfaceConstructor {
    public InterfaceConstructor() {
    }
}
